--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 
         <div class="hero__img">
-         <img  class="hero__img__avatar" src="/img/hero.svg" alt="">
+         <img  class="hero__img__avatar" src="./img/heroavatar.svg" alt="">
         </div>
 
 
